# genex

./: .gitignore  CMakeLists.txt  GenexCLI.cpp  LICENSE  MANIFEST.in  NOTES  README.md  build.sh  run.sh  setup.py
cli/: CMakeLists.txt  Command.hpp  GenexCLI.cpp
dataset/: ItalyPower.txt
datasets/: experiments.xlsx
datasets/test/: ItalyPowerDemand_DATA  ItalyPowerDemand_QUERY  test_3_uneven_space.txt  test_5_10_comma_with_names.txt  test_5_10_space_with_names.txt
experiments/: results.xlsx
genex/: CMakeLists.txt  Common.hpp  Exception.hpp  GenexAPI.cpp  GenexAPI.hpp  GlobalGroupSpace.cpp  GlobalGroupSpace.hpp  Group.cpp  Group.hpp  GroupableTimeSeriesSet.cpp  GroupableTimeSeriesSet.hpp  IO.hpp  LocalLengthGroupSpace.cpp  LocalLengthGroupSpace.hpp  PAAWrapper.cpp  PAAWrapper.hpp  README.md  TimeSeries.cpp  TimeSeries.hpp  TimeSeriesSet.cpp  TimeSeriesSet.hpp
genex/distance/: Chebyshev.hpp  Cosine.hpp  Distance.cpp  Distance.hpp  Euclidean.hpp  Manhattan.hpp  Sorensen.hpp
genex/group/: GlobalGroupSpace.cpp  GlobalGroupSpace.hpp  Group.cpp  Group.hpp  LocalLengthGroupSpace.cpp  LocalLengthGroupSpace.hpp
genex/lib/: ThreadPool.hpp  trillionDTW.cpp  trillionDTW.h  util.cpp
pygenex/: CMakeLists.txt  GENEXBindings.cpp
scripts/: 0_process_ucr.py  1_extract_info.py  2_generate_groups.py  3_brute_force.py  4_paa.py  5_genex.py  brute_force.py  common.py  extract_info.py  gen_all_experiments  gen_all_experiments_0.1  gen_all_experiments_0.2  gen_all_outside_experiments_0.1  gen_all_outside_experiments_0.2  gen_ksim_exp.py  gen_ksim_outside_exp.py  generate_groups.py  generate_groups_0.1.txt  generate_groups_0.2.txt  generate_groups_0.3.txt  generate_groups_0.4.txt  generate_groups_0.5.txt  groups_heatmap.py  ksim_50words_0.1.genex  ksim_ECG200_0.1.genex  ksim_ECG200_0.3.genex  ksim_FaceAll_0.1.genex  ksim_FaceAll_0.3.genex  ksim_Gun_Point_0.1.genex  ksim_Gun_Point_0.3.genex  ksim_Haptics_0.2.genex  ksim_Haptics_0.3.genex  ksim_ItalyPowerDemand_0.1.genex  ksim_ItalyPowerDemand_0.3.genex  ksim_MALLAT_0.2.genex  ksim_MALLAT_0.3.genex  ksim_MedicalImages_0.1.genex  ksim_StarLightCurves_0.3.genex  ksim_TwoPatterns_0.2.genex  ksim_TwoPatterns_0.3.genex  (+23 more)
scripts/miscellaneous/: Untitled.ipynb  dtw.py  dtw_plotter.ipynb
scripts/postprocessing/: common.py  groups_visualization.ipynb  results_processing_all_datasets.ipynb  results_processing_individual_dataset.ipynb  utils.py
scripts/preprocessing/: generate_groups_0.1.genex  generate_groups_0.2.genex  generate_groups_0.3.genex  generate_groups_0.4.genex  generate_groups_0.5.genex  generate_groups_0.6.genex  generate_groups_0.7.genex  generate_groups_0.8.genex  generate_groups_0.9.genex  normalize_data.genex  normalize_data.txt  preprocess_arrythmia.genex  save_groups_size_0.1.genex  save_groups_size_0.2.genex  save_groups_size_0.3.genex  save_groups_size_0.5.genex
src/: CMakeLists.txt  Chebyshev.hpp  DistanceManager.cpp  DistanceManager.hpp  DistanceMetric.hpp  Euclidean.hpp  ExampleClass.cpp  ExampleClass.hpp  Exception.hpp  GenexAPI.cpp  GenexAPI.hpp  GlobalGroupSpace.cpp  GlobalGroupSpace.hpp  Group.cpp  Group.hpp  GroupCentroid.cpp  GroupCentroid.hpp  GroupableTimeSeriesSet.cpp  GroupableTimeSeriesSet.hpp  GroupsEqualLength.cpp  GroupsEqualLength.hpp  GroupsEqualLengthSet.cpp  GroupsEqualLengthSet.hpp  LocalLengthGroupSpace.cpp  LocalLengthGroupSpace.hpp  Manhattan.hpp  Minkowski.hpp  README.md  Test.cpp  TimeSeries.cpp  TimeSeries.hpp  TimeSeriesSet.cpp  TimeSeriesSet.hpp  config.hpp.in
src/distance/: AltEuclidean.hpp  Chebyshev.hpp  Cosine.hpp  Distance.cpp  Distance.hpp  DistanceManager.cpp  DistanceManager.hpp  DistanceMetric.hpp  Euclidean.hpp  Manhattan.hpp  Sorensen.hpp
src/lib/: trillionDTW.cpp  trillionDTW.h  util.cpp  util.h
src/test/: testExample.cpp  testExampleClass.cpp
test/: CMakeLists.txt  ChebyshevNormTest.cpp  ChebyshevTest.cpp  DistanceManagerTest.cpp  EuclideanNormTest.cpp  EuclideanTest.cpp  GenexAPITest.cpp  GenexAPIText.cpp  GlobalGroupSpaceTest.cpp  GroupCentroidTest.cpp  GroupableTimeSeriesSetTest.cpp  GroupsEqualLengthSetTest.cpp  GroupsEqualLengthTest.cpp  GroupsTest.cpp  LocalLengthGroupSpaceTest.cpp  ManhattanNormTest.cpp  ManhattanTest.cpp  MinkowskiNormTest.cpp  PAAWrapperTest.cpp  TestUtils.hpp  TimeSeriesSetTest.cpp  TimeSeriesTest.cpp  testDistanceManager.cpp  testExample.cpp  testExampleClass.cpp  testMinkowski.cpp
test/distance/: ChebyshevNormTest.cpp  ChebyshevTest.cpp  CosineTest.cpp  DistanceManagerTest.cpp  DistanceTest.cpp  EuclideanNormTest.cpp  EuclideanTest.cpp  GeneralDistanceTest.cpp  ManhattanNormTest.cpp  ManhattanTest.cpp  SorensenTest.cpp
test/group/: GlobalGroupSpaceTest.cpp  GroupableTimeSeriesSetTest.cpp  GroupsTest.cpp  LocalLengthGroupSpaceTest.cpp
